@@ -3,6 +3,8 @@
 ==== Ver 1.2.7-dev(2015/xx/xx)
  * FIX: ツイートの選択時にシステムの効果音が鳴っていた不具合を修正
  * FIX: Ctrl+Eでツイート内のリンクを開く際に、Ctrlキーで「ユーザーのホームをタブで開く」設定を反転させる機能と競合していた不具合を修正 (thx @dj_kusuha!)
+ * FIX: 異常なsourceを含むツイートの振り分け時にエラーが発生する問題の回避
+ * FIX: 正規表現でSourceを振り分ける条件をミュートタブに設定するとDM受信時にエラーが発生する不具合を修正 (thx @Raydere!)
 
 ==== Ver 1.2.6(2015/06/10)
  * Twitter 社から規約違反として指摘を受けた箇所を修正したバージョンです
